--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="normalize.css" />
 		<link rel="stylesheet" href="styles.css" />
 		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Faster+One&family=Gloria+Hallelujah&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&family=Faster+One&display=swap');
 		</style>
 	</head>
 	<body>
@@ -25,13 +25,52 @@
 							d="M226.5 92.9c14.3 42.9-.3 86.2-32.6 96.8s-70.1-15.6-84.4-58.5s.3-86.2 32.6-96.8s70.1 15.6 84.4 58.5zM100.4 198.6c18.9 32.4 14.3 70.1-10.2 84.1s-59.7-.9-78.5-33.3S-2.7 179.3 21.8 165.3s59.7 .9 78.5 33.3zM69.2 401.2C121.6 259.9 214.7 224 256 224s134.4 35.9 186.8 177.2c3.6 9.7 5.2 20.1 5.2 30.5v1.6c0 25.8-20.9 46.7-46.7 46.7c-11.5 0-22.9-1.4-34-4.2l-88-22c-15.3-3.8-31.3-3.8-46.6 0l-88 22c-11.1 2.8-22.5 4.2-34 4.2C84.9 480 64 459.1 64 433.3v-1.6c0-10.4 1.6-20.8 5.2-30.5zM421.8 282.7c-24.5-14-29.1-51.7-10.2-84.1s54-47.3 78.5-33.3s29.1 51.7 10.2 84.1s-54 47.3-78.5 33.3zM310.1 189.7c-32.3-10.6-46.9-53.9-32.6-96.8s52.1-69.1 84.4-58.5s46.9 53.9 32.6 96.8s-52.1 69.1-84.4 58.5z"
 						/>
 					</svg>
-					<h1>Zoomy</h1>
+					<h1>Zoomi</h1>
 				</div>
 			</div>
 			<div class="rightSide">
-				<div class="sectionOne"></div>
-				<form action="sign-up-form" method="post"></form>
-				<div class="sectionThree"></div>
+				<div class="sectionOne side fonts">
+					<p>
+						This is not a real online service! Everyone loves dogs, and you know
+						you need more of them in your life. I mean who doesn't love a good
+						ole doggo?<br />
+						Sign up now to make this doggo proud.
+					</p>
+					<p>Did I mention there was puppers!?</p>
+				</div>
+				<form action="sign-up-form" method="post">
+					<p class="fonts">Let's do this!</p>
+					<div class="form side">
+						<div class="input">
+							<label for="first-name">First Name</label>
+							<input id="first-name" name="first-name" type="text" />
+						</div>
+						<div class="input">
+							<label for="last-name">Last Name</label>
+							<input id="last-name" name="last-name" type="text" />
+						</div>
+						<div class="input">
+							<label for="email">Email</label>
+							<input id="email" name="email" type="email" />
+						</div>
+						<div class="input">
+							<label for="phone">Phone Number</label>
+							<input id="phone" name="phone" type="number" />
+						</div>
+						<div class="input">
+							<label for="password">Password</label>
+							<input id="password" name="password" type="password" />
+						</div>
+						<div class="input">
+							<label for="confirmPW">Confirm Password</label>
+							<input id="confirmPW" name="confirmPW" type="password" />
+						</div>
+					</div>
+				</form>
+				<div class="sectionThree">
+					<button type="submit">Create Account</button>
+					<p>Already have an account? <a href="">Log In</a></p>
+				</div>
 			</div>
 		</div>
 	</body>
