Add style to webpage

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p>Did I mention there was puppers!?</p>
 				</div>
 				<form action="sign-up-form" method="post">
-					<p class="fonts">Let's do this!</p>
+					<p class="fonts side">Let's do this!</p>
 					<div class="form side">
 						<div class="input">
 							<label for="first-name">First Name</label>
@@ -55,7 +55,7 @@
 						</div>
 						<div class="input">
 							<label for="phone">Phone Number</label>
-							<input id="phone" name="phone" type="number" />
+							<input id="phone" name="phone" type="tel" />
 						</div>
 						<div class="input">
 							<label for="password">Password</label>
@@ -67,9 +67,11 @@
 						</div>
 					</div>
 				</form>
-				<div class="sectionThree">
+				<div class="sectionThree side">
 					<button type="submit">Create Account</button>
-					<p>Already have an account? <a href="">Log In</a></p>
+					<p class="fonts member">
+						Already have an account? <a href="">Log In</a>
+					</p>
 				</div>
 			</div>
 		</div>
